NSA-7273 - fixed ovrflow and sorting wrapping

--- a/src/gds-upgrade/sass/_filters.scss
+++ b/src/gds-upgrade/sass/_filters.scss
@@ -26,7 +26,7 @@
 }
 
 .dfe-filter-scroll {
-  overflow: scroll;
+  overflow: auto;
   height: calc(95vh);
 }
 
@@ -91,4 +91,7 @@
 
 .dfe-filter-by-checkbox {
   padding-left: 10px;
+}
+.dfe-white-space-no-wrap {
+  white-space: nowrap;
 }
